/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package recorderpb;

import "mirbftpb/mirbft.proto";

// To re-generate, run:
//   protoc --go_out=. recorder.proto
// or simply run go generate

message RecordedEvent {
	uint64 node_id = 1;
	int64 time = 2;
        mirbftpb.StateEvent state_event =3;
}
